Cleanup (minor optimization; warnings; formatting)
GitOrigin-RevId: a7007590b6c803616dc5c39574607d3bf6ffb004